tests/tooling/fixtures/native/execution/positive/class_return_nullability_alias_signature.objc3
module ClassReturnNullabilityAliasSignature;

fn chooseMaybe(flag: bool, when_true: Class, when_false: Class) -> Class? {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn chooseAlways(flag: bool, when_true: Class, when_false: Class) -> Class! {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn main() -> i32 {
  return chooseMaybe(true, 30, 2) + chooseAlways(false, 5, 7);
}
