tests/tooling/fixtures/native/execution/negative/return_bool_nullability_suffix_unsupported.objc3
module ReturnBoolNullabilitySuffixUnsupported;

fn pick(flag: bool) -> bool? {
  return flag;
}

fn main() -> i32 {
  if (pick(true)) {
    return 1;
  }
  return 0;
}
